Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-8152

Persistent write failure due to no existing vbucket file for the given doc

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 2.1.0
    • 2.0.1
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      In a rare case EP Engine could silently throw out a failed persistent write of a document if the associating underlying vbucket file is missing. This happens when the persistent write is being issued to couchstore before or while the vbucket file is being created. This could lead to data loss unless the subsequent update on the same doc is being made afterward.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jin Jin Lim (Inactive)
            jin Jin Lim (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty