MB-8152: Don't write to vbucket file until it exists

We should mark all vbuckets in the vbucket map as in creation mode
until we know that they are actually on disk. This way the flusher
won't write anything to them until we do the initial vbucket
snapshot to make sure that they are there.

Change-Id: I2b8b367b400b9c28723bb94c1469ac849f71c12c
Reviewed-on: http://review.couchbase.org/25988
Reviewed-by: Michael Wiederhold <mike@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>